# WorkBinder

./: Cargo.toml  DEVLOG.md  README.md  workbinder_documents.json  workbinder_tasks.json
frontend/: package-lock.json  package.json
frontend/app/: page.tsx
src/: embeddings.rs  employees.rs  events.rs  main.rs  model.rs  mork.rs  notifications.rs  storage.rs  tasks.rs
